fix Tooltip issues and ILO-221 decrease the white spaces bellow the chart in countries comparision

--- a/static/custom/modules/vertical/eu-estimates/countries-comparison/countries-comparison.scss
+++ b/static/custom/modules/vertical/eu-estimates/countries-comparison/countries-comparison.scss
@@ -60,7 +60,8 @@
     width:100%;
     padding:0;
     max-height: 620px;
-    min-height: 620px;
+    min-height: auto;
+    margin-bottom: 0;
     > .item{
       width: 100% !important;
     }
